// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ContributorRow  Row should be clickable when showContributorAssignment set to true 1`] = `
<div
  className="contributorsRow datalist datalist-row "
  id={0}
  key="0"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <div
    className="columns is-gapless is-mobile"
  >
    <div
      className="column no-overflow"
    >
      <div
        aria-label="Select this record (J. Smith) to assign it to you"
        className="columns is-gapless contributorDetails"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <div
          className="column is-narrow is-hidden-mobile"
        >
          <FontIcon
            className="authorIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            person_outline
          </FontIcon>
        </div>
        <div
          className="column datalist-text contributor"
        >
          <div
            className="contributorName no-overflow"
          >
            <div
              className="columns is-gapless is-mobile"
            >
              <div
                className="column is-narrow name"
              >
                J. Smith
              </div>
            </div>
          </div>
          <div
            className="contributorSubtitle datalist-text-subtitle"
          >
            First  listed contributor
          </div>
        </div>
      </div>
    </div>
    <div
      className="column is-narrow"
    >
      <div
        className="columns is-gapless contributorActions"
      >
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <div
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          />
        </div>
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <div
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          />
        </div>
        <div
          className="column is-narrow contributorDelete datalist-buttons"
        >
          <IconButton
            aria-label="Remove this record"
            className="contributorDelete"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltip="Remove this record"
            tooltipPosition="bottom-left"
            touch={false}
          >
            <FontIcon
              className="material-icons deleteIcon"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              delete
            </FontIcon>
          </IconButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ContributorRow  Row should not be clickable when showContributorAssignment set to false 1`] = `
<div
  className="contributorsRow datalist datalist-row "
  id={0}
  key="0"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <div
    className="columns is-gapless is-mobile"
  >
    <div
      className="column no-overflow"
    >
      <div
        className="columns is-gapless contributorDetails is-mobile"
      >
        <div
          className="column is-narrow is-hidden-mobile"
        >
          <FontIcon
            className="authorIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            person_outline
          </FontIcon>
        </div>
        <div
          className="column datalist-text contributor"
        >
          <div
            className="contributorName no-overflow"
          >
            J. Smith
          </div>
          <div
            className="contributorSubtitle datalist-text-subtitle"
          >
            First  listed contributor
          </div>
        </div>
      </div>
    </div>
    <div
      className="column is-narrow"
    >
      <div
        className="columns is-gapless contributorActions"
      >
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <div
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          />
        </div>
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <div
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          />
        </div>
        <div
          className="column is-narrow contributorDelete datalist-buttons"
        >
          <IconButton
            aria-label="Remove this record"
            className="contributorDelete"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltip="Remove this record"
            tooltipPosition="bottom-left"
            touch={false}
          >
            <FontIcon
              className="material-icons deleteIcon"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              delete
            </FontIcon>
          </IconButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ContributorRow  a row with index and contributor set, renders only name and delete button 1`] = `
<div
  className="contributorsRow datalist datalist-row "
  id={0}
  key="0"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <div
    className="columns is-gapless is-mobile"
  >
    <div
      className="column no-overflow"
    >
      <div
        className="columns is-gapless contributorDetails is-mobile"
      >
        <div
          className="column is-narrow is-hidden-mobile"
        >
          <FontIcon
            className="authorIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            person_outline
          </FontIcon>
        </div>
        <div
          className="column datalist-text contributor"
        >
          <div
            className="contributorName no-overflow"
          >
            A. Smith
          </div>
          <div
            className="contributorSubtitle datalist-text-subtitle"
          >
            First  listed contributor
          </div>
        </div>
      </div>
    </div>
    <div
      className="column is-narrow"
    >
      <div
        className="columns is-gapless contributorActions"
      >
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <div
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          />
        </div>
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <div
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          />
        </div>
        <div
          className="column is-narrow contributorDelete datalist-buttons"
        >
          <IconButton
            aria-label="Remove this record"
            className="contributorDelete"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltip="Remove this record"
            tooltipPosition="bottom-left"
            touch={false}
          >
            <FontIcon
              className="material-icons deleteIcon"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              delete
            </FontIcon>
          </IconButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ContributorRow  a row with index and contributor set, renders reorder buttons, contributor assignment, and delete button 1`] = `
<div
  className="contributorsRow datalist datalist-row "
  id={0}
  key="0"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <div
    className="columns is-gapless is-mobile"
  >
    <div
      className="column no-overflow"
    >
      <div
        aria-label="Select this record (J. Smith) to assign it to you"
        className="columns is-gapless contributorDetails"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex="0"
      >
        <div
          className="column is-narrow is-hidden-mobile"
        >
          <FontIcon
            className="authorIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            person_outline
          </FontIcon>
        </div>
        <div
          className="column datalist-text contributor"
        >
          <div
            className="contributorName no-overflow"
          >
            <div
              className="columns is-gapless is-mobile"
            >
              <div
                className="column is-narrow name"
              >
                J. Smith
              </div>
            </div>
          </div>
          <div
            className="contributorSubtitle datalist-text-subtitle"
          >
            First  listed contributor
          </div>
        </div>
      </div>
    </div>
    <div
      className="column is-narrow"
    >
      <div
        className="columns is-gapless contributorActions"
      >
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <IconButton
            aria-label="Move record up the order"
            className="reorderUp"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltip="Move record up the order"
            tooltipPosition="bottom-left"
            touch={false}
          >
            <FontIcon
              className="material-icons"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              keyboard_arrow_up
            </FontIcon>
          </IconButton>
        </div>
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <IconButton
            aria-label="Move record down the order"
            className="reorderDown"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltip="Move record down the order"
            tooltipPosition="bottom-left"
            touch={false}
          >
            <FontIcon
              className="material-icons"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              keyboard_arrow_down
            </FontIcon>
          </IconButton>
        </div>
        <div
          className="column is-narrow contributorDelete datalist-buttons"
        >
          <IconButton
            aria-label="Remove this record"
            className="contributorDelete"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltip="Remove this record"
            tooltipPosition="bottom-left"
            touch={false}
          >
            <FontIcon
              className="material-icons deleteIcon"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              delete
            </FontIcon>
          </IconButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ContributorRow  a row with index and contributor with author details set and set as selected 1`] = `
<div
  className="contributorsRow datalist datalist-row selected"
  id={0}
  key="0"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <div
    className="columns is-gapless is-mobile"
  >
    <div
      className="column no-overflow"
    >
      <div
        className="columns is-gapless contributorDetails is-mobile"
      >
        <div
          className="column is-narrow is-hidden-mobile"
        >
          <FontIcon
            className="authorIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            person_outline
          </FontIcon>
        </div>
        <div
          className="column datalist-text contributor"
        >
          <div
            className="contributorName no-overflow"
          />
          <div
            className="contributorSubtitle datalist-text-subtitle"
          >
            First  listed contributor
          </div>
        </div>
        <div
          className="column contributorIdentifier datalist-text is-hidden-mobile"
        >
          <div
            className="identifierName"
          >
             
          </div>
          <div
            className="identifierSubtitle datalist-text-subtitle"
          />
        </div>
      </div>
    </div>
    <div
      className="column is-narrow"
    >
      <div
        className="columns is-gapless contributorActions"
      >
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <div
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          />
        </div>
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <div
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          />
        </div>
        <div
          className="column is-narrow contributorDelete datalist-buttons"
        >
          <IconButton
            aria-label="Remove this record"
            className="contributorDelete"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltip="Remove this record"
            tooltipPosition="bottom-left"
            touch={false}
          >
            <FontIcon
              className="material-icons deleteIcon"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              delete
            </FontIcon>
          </IconButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ContributorRow  a row with index and contributor with author details set, contributor author details, and delete button 1`] = `
<div
  className="contributorsRow datalist datalist-row "
  id={0}
  key="0"
>
  <ConfirmDialogBox
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this record?",
        "confirmationTitle": "Delete record",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
  />
  <div
    className="columns is-gapless is-mobile"
  >
    <div
      className="column no-overflow"
    >
      <div
        className="columns is-gapless contributorDetails is-mobile"
      >
        <div
          className="column is-narrow is-hidden-mobile"
        >
          <FontIcon
            className="authorIcon material-icons"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            person_outline
          </FontIcon>
        </div>
        <div
          className="column datalist-text contributor"
        >
          <div
            className="contributorName no-overflow"
          >
            J. Smith
          </div>
          <div
            className="contributorSubtitle datalist-text-subtitle"
          >
            First  listed contributor
          </div>
        </div>
        <div
          className="column contributorIdentifier datalist-text is-hidden-mobile"
        >
          <div
            className="identifierName"
          >
            Mr
             
            Christopher Christoff
          </div>
          <div
            className="identifierSubtitle datalist-text-subtitle"
          />
        </div>
      </div>
    </div>
    <div
      className="column is-narrow"
    >
      <div
        className="columns is-gapless contributorActions"
      >
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <div
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          />
        </div>
        <div
          className="column is-narrow is-hidden-mobile contributorReorder datalist-buttons"
        >
          <div
            style={
              Object {
                "height": "50px",
                "width": "50px",
              }
            }
          />
        </div>
        <div
          className="column is-narrow contributorDelete datalist-buttons"
        >
          <IconButton
            aria-label="Remove this record"
            className="contributorDelete"
            disableTouchRipple={false}
            disabled={false}
            iconStyle={Object {}}
            onClick={[Function]}
            tooltip="Remove this record"
            tooltipPosition="bottom-left"
            touch={false}
          >
            <FontIcon
              className="material-icons deleteIcon"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              delete
            </FontIcon>
          </IconButton>
        </div>
      </div>
    </div>
  </div>
</div>
`;
